[package]
name = "ministr-cli"
version = "0.7.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code intelligence MCP server for AI coding agents — semantic code search, symbol navigation, and cross-language bridge detection"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "code-intelligence", "embeddings", "llm", "rag"]

[lib]
# F31.2b — exposes commands::cmd_serve_http (and supporting modules) so
# `ministr-cloud-tools` can call the same serve flow with a
# `CloudRouterMounter` wired in. The MIT binary `ministr` (below) keeps
# behaving as before, calling cmd_serve_http with `mounter = None`.
name = "ministr_cli"
path = "src/lib.rs"

[[bin]]
name = "ministr"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ministr-api.workspace = true
# Non-macOS: fastembed/ONNX path only. candle-core pulls in the Apple-only
# `metal` crate stack (objc2), which refuses to compile on Linux/Windows.
ministr-mcp.workspace = true
# Headless daemon host: the `ministr __daemon` subcommand runs the same
# daemon ministr-app does, so the CLI can self-spawn it (no GUI needed).
ministr-daemon.workspace = true
# F31.2b/c — `ministr-cloud` + `ministr-atlas` are NO LONGER
# dependencies of the MIT `ministr` binary. All cloud-mode wiring
# rides the `ministr_api::CloudRouterMounter` MIT seam — the
# proprietary impls live in `ministr-cloud-tools` (operator CLI) +
# `ministr-cloud-tools serve` (cloud-mode HTTP server). Re-adding
# either dep here would re-introduce the open-core licensing leak.
# Direct rustls dep — used by main() to install the process-wide
# CryptoProvider exactly once at startup. Both `ring` and
# `aws-lc-rs` are pulled in transitively (via reqwest +
# rustls-platform-verifier + tokio-postgres-rustls), so rustls 0.23+
# refuses to auto-pick. Without `install_default` every TLS path
# (Postgres pool, reqwest, Azure SDK) panics on first use.
rustls.workspace = true
# F2.6+ — `ministr cloud demo` builds the PKCE verifier from the OS
# CSPRNG (RFC 7636 §4.1) and serialises a few small response
# envelopes off the wire.
serde = { workspace = true }
getrandom = "0.3"
clap.workspace = true
rmcp.workspace = true
axum.workspace = true
tokio.workspace = true
# PHASE6 chunk 2 — the WorkerLoop in src/worker.rs uses
# `tokio_util::sync::CancellationToken` for cooperative shutdown and
# `futures::Future` for the boxed-future return shape of the JobRunner
# trait. Same versions ministr-core already pins.
tokio-util = "0.7"
futures = "0.3"
# F3.6-b-ii-a — opt-in CORS for the cloud HTTP server. Default-off:
# when `MINISTR_CORS_ALLOWED_ORIGINS` is unset, no CORS layer is
# mounted and self-hosted serve stays exactly as before. When set
# (cloud deploys + dev workflows that browse a daemon from
# `ministr.ai/demo/bridge`-style pages), the listed origins receive
# the `Access-Control-Allow-*` headers.
tower-http = { version = "0.6", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
sha2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
notify.workspace = true
toml.workspace = true
dialoguer.workspace = true
onpath.workspace = true
# F31.2a moved `cmd_cloud_mint_test_license` to ministr-cloud-tools;
# `openssl` + `jsonwebtoken` deps moved with it. Removed here to
# keep ministr-cli's dep tree open-core-clean.

[features]
# Opt-in DirectML GPU acceleration for Windows (no-op elsewhere).
# Forwarded to ministr-core, which in turn enables fastembed/directml.
directml = ["ministr-core/directml"]

# macOS: enable the candle Metal backend on top of the default fastembed path.
[target.'cfg(target_os = "macos")'.dependencies]
ministr-core = { workspace = true, features = ["candle"] }

# Non-macOS: fastembed path only (candle-metal unavailable off Apple).
[target.'cfg(not(target_os = "macos"))'.dependencies]
ministr-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
