[package]
name = "ministr-cloud"
version = "0.6.0"
publish = false
edition.workspace = true
rust-version.workspace = true
# Closed-source crate. The workspace default is MIT for the open-core
# half; this override marks ministr-cloud as proprietary. The crate
# holds multi-tenant cloud-only code (tenant model, Stripe glue, GitHub
# OAuth IdP adapter, quota middleware, billing portal handlers) that
# only exists because we run mcp.ministr.ai as a service. See
# STEWARDSHIP.md for the open-core split.
license = "LicenseRef-Proprietary"
repository.workspace = true
homepage.workspace = true
description = "Proprietary cloud surface for ministr — multi-tenant tenancy, billing, IdP adapters, and quota enforcement. Not part of the MIT open-core."
readme = "../README.md"

[lints]
workspace = true

[dependencies]
# New deps are added by the F-item that first needs them so the crate's
# dep tree stays auditable.
serde.workspace = true
serde_json.workspace = true
# F1.1 sub-bullet 5 — per-corpus HNSW blob persistence. Reuses
# `ministr-core::bundle::{export_bundle, import_bundle}` for the
# .ministr-index file format; this crate only owns the Azure-side
# upload/download wrapper.
ministr-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tempfile.workspace = true
# Official Azure SDK for Rust — GA'd May 2026.
azure_core = "1"
azure_identity = "1"
azure_storage_blob = "1"
futures = "0.3"
# F1.2 — multi-tenant data model. deadpool-postgres pool + rustls TLS
# (Azure Postgres Flex requires TLS server-side; no opt-out). Same
# pinning as ministr-mcp's OAuthBackend::Postgres so we don't end up
# with two Postgres client versions in one binary.
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
