[package]
name = "ministr-cloud"
version = "0.6.0"
publish = false
edition.workspace = true
rust-version.workspace = true
# Closed-source crate. The workspace default is MIT for the open-core
# half; this override marks ministr-cloud as proprietary. The crate
# holds multi-tenant cloud-only code (tenant model, Stripe glue, GitHub
# OAuth IdP adapter, quota middleware, billing portal handlers) that
# only exists because we run mcp.ministr.ai as a service. See
# STEWARDSHIP.md for the open-core split.
license = "LicenseRef-Proprietary"
repository.workspace = true
homepage.workspace = true
description = "Proprietary cloud surface for ministr — multi-tenant tenancy, billing, IdP adapters, and quota enforcement. Not part of the MIT open-core."
readme = "../README.md"

[lints]
workspace = true

[dependencies]
# New deps are added by the F-item that first needs them so the crate's
# dep tree stays auditable.
serde.workspace = true
serde_json.workspace = true
# F1.1 sub-bullet 5 — per-corpus HNSW blob persistence. Reuses
# `ministr-core::bundle::{export_bundle, import_bundle}` for the
# .ministr-index file format; this crate only owns the Azure-side
# upload/download wrapper.
ministr-core.workspace = true
# F1.2 sub-bullet 2 — Plan + Tenant types live in ministr-mcp (MIT) so
# the auth middleware that ships in the local stack can attach a Tenant
# to request extensions without depending on this closed crate. We
# re-export Plan here for downstream cloud-only consumers.
ministr-mcp.workspace = true
# F1.4 sub-bullet 2 — PostgresUsageSink impls ministr_api::UsageSink
# and consumes ministr_api::TenantId. Direct dep keeps the closed
# billing impl honest about which open-core types it composes against.
ministr-api.workspace = true
# F2.3 — quota module's RegistryProbe wraps the daemon's CorpusRegistry
# to count corpora on a pod. Closed → MIT direction; no cycle (daemon
# never imports ministr-cloud).
ministr-daemon.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tempfile.workspace = true
# Official Azure SDK for Rust — GA'd May 2026.
azure_core = "1"
azure_identity = "1"
azure_storage_blob = "1"
futures = "0.3"
# F1.2 — multi-tenant data model. deadpool-postgres pool + rustls TLS
# (Azure Postgres Flex requires TLS server-side; no opt-out). Same
# pinning as ministr-mcp's OAuthBackend::Postgres so we don't end up
# with two Postgres client versions in one binary.
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
# F1.3 — GitHub OAuth IdP. reqwest is the workspace HTTP client; we use
# rustls + http2 the same way ministr-mcp and ministr-app do, so there's
# no second TLS stack in the binary. `json` enables the .json() helper
# the GitHubIdp uses for the token + user-info responses.
reqwest = { workspace = true, features = ["json"] }
# F1.4 sub-bullet 4 — billing endpoint module exposes an axum Router
# for `GET /api/v1/billing/usage`. Same axum version as ministr-mcp /
# ministr-daemon to keep one Tower middleware tree in the binary.
axum.workspace = true
# F1.5 sub-bullet 3 — Stripe webhook signature verification.
# HMAC-SHA256 over the raw request body keyed by the endpoint signing
# secret; constant-time compare via `subtle` immune to timing-channel
# attacks. Same crates ministr-mcp uses for GitHub webhook HMAC.
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
# F1.3 sub-bullet — GitHub sign-in flow. parking_lot::Mutex for the
# in-memory pending-state map (same convention as the rest of the
# workspace); getrandom for cryptographically-random PKCE verifiers
# (RFC 7636 §4.1 requires CSPRNG).
parking_lot.workspace = true
getrandom = "0.3"
# F2.1 — GitHub App authentication. RS256-signed JWT with the App's
# private key, exchanged at /app/installations/{id}/access_tokens for
# a short-lived installation access token. `jsonwebtoken` is the
# standard 2026 Rust JWT crate (no transitive openssl, pure-Rust
# ring/rustls under the hood).
jsonwebtoken = "9"
# F5.1-b — SAML 2.0 service-provider primitives. Pinned to 0.0.20
# (Mar 2026, the latest release as of /roadmap research). The
# `xmlsec` feature pulls in libxml2 + xmlsec1 native libraries and
# is needed for assertion-signature verification (lands in F5.1-c);
# kept off here so F5.1-b's metadata + AuthnRequest generation
# stays pure-Rust + dep-light.
samael = { version = "0.0.20", default-features = false }
# F5.1-b — SAML HTTP-Redirect binding requires DEFLATE-compressed
# + base64-encoded `SAMLRequest` query parameter per SAML Bindings
# §3.4.4. samael doesn't expose a helper for unsigned redirects,
# so we deflate + base64 the XML ourselves.
base64 = "0.22.1"
flate2 = "1.1.9"

[dev-dependencies]
# F2.2 — rate-limit tests drive the axum middleware via
# `Router::oneshot` (tower's ServiceExt). Test-only dep; not pulled
# into the production binary.
tower = { version = "0.5", features = ["util"] }
# PHASE6 chunk 4b — tokio test-util enables `#[tokio::test(start_paused = true)]`
# so the embedder's 429-Retry-After backoff tests don't wait wall-clock
# seconds. Not in `full` because it changes runtime behavior.
tokio = { workspace = true, features = ["test-util"] }
