[package]
name = "ministr-core"
version = "0.6.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core domain logic for ministr — code intelligence for AI coding agents"
readme = "../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["mcp", "code-intelligence", "embeddings", "llm", "rag"]

[lints]
workspace = true

[dependencies]
# F6.1-b — SessionRegistry holds an Option<Arc<dyn SessionStorage>> from
# ministr-api so the cloud can wire PostgresSessionStorage. ministr-api
# is the MIT type/trait seam — no heavy deps; this is the same layering
# convention ministr-mcp and ministr-daemon already follow.
ministr-api.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true
toml_edit.workspace = true
dirs = "6"
# F31.2b-ii-O — `json` feature needed by the Azure OpenAI embedder
# moved here from ministr-cloud (uses .json() on the request + response).
reqwest = { workspace = true, features = ["json"] }
url.workspace = true
comrak.workspace = true
scraper.workspace = true
pdf-extract.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
tiktoken-rs.workspace = true
sha2.workspace = true
blake3.workspace = true
quick-xml.workspace = true
fastembed.workspace = true
ort.workspace = true
hnsw_rs.workspace = true
notify.workspace = true
tokio-util = "0.7"
futures = "0.3"
glob.workspace = true
ignore.workspace = true
parking_lot.workspace = true
# Dedicated CPU pool for off-runtime tree-sitter parsing (see
# ingestion/parse_pool.rs).
rayon.workspace = true
logos.workspace = true
tree-sitter.workspace = true
tree-sitter-language.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-unreal-cpp = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }
tree-sitter-kotlin-ng = { workspace = true, optional = true }
tree-sitter-bash = { workspace = true, optional = true }
tree-sitter-php = { workspace = true, optional = true }
tree-sitter-scala = { workspace = true, optional = true }
tree-sitter-lua = { workspace = true, optional = true }
tree-sitter-elixir = { workspace = true, optional = true }
tree-sitter-haskell = { workspace = true, optional = true }
tree-sitter-ocaml = { workspace = true, optional = true }
tree-sitter-dart = { workspace = true, optional = true }
tree-sitter-r = { workspace = true, optional = true }
tree-sitter-hcl = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-yaml = { workspace = true, optional = true }
tree-sitter-toml-ng = { workspace = true, optional = true }
tree-sitter-sequel = { workspace = true, optional = true }
tree-sitter-zig = { workspace = true, optional = true }
tree-sitter-proto = { workspace = true, optional = true }
tree-sitter-svelte-ng = { workspace = true, optional = true }
tree-sitter-css = { workspace = true, optional = true }
tree-sitter-graphql = { workspace = true, optional = true }
tree-sitter-groovy = { workspace = true, optional = true }
tree-sitter-nix = { workspace = true, optional = true }
tree-sitter-erlang = { workspace = true, optional = true }
tree-sitter-powershell = { workspace = true, optional = true }
tree-sitter-solidity = { workspace = true, optional = true }
tree-sitter-objc = { workspace = true, optional = true }
tree-sitter-julia = { workspace = true, optional = true }
tree-sitter-cmake = { workspace = true, optional = true }
tree-sitter-make = { workspace = true, optional = true }
tar.workspace = true
zstd.workspace = true
tempfile.workspace = true

# Candle (optional — Metal GPU embedding backend)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[features]
default = ["lang-all"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers"]
# DirectML GPU acceleration for the ONNX/FastEmbed backend on Windows.
# No-op on other platforms (the activation code is `#[cfg(target_os = "windows")]`-gated
# in fastembed_impl.rs), so it's safe to leave enabled in a portable workspace
# build — the feature just forwards to fastembed's directml capability.
directml = ["fastembed/directml"]
lang-all = [
    "lang-python",
    "lang-javascript",
    "lang-typescript",
    "lang-go",
    "lang-java",
    "lang-c",
    "lang-cpp",
    "lang-ruby",
    "lang-csharp",
    "lang-swift",
    "lang-kotlin",
    "lang-bash",
    "lang-php",
    "lang-scala",
    "lang-lua",
    "lang-elixir",
    "lang-haskell",
    "lang-ocaml",
    "lang-dart",
    "lang-r",
    "lang-hcl",
    "lang-json",
    "lang-yaml",
    "lang-toml",
    "lang-sql",
    "lang-zig",
    "lang-proto",
    "lang-svelte",
    "lang-css",
    "lang-graphql",
    "lang-groovy",
    "lang-nix",
    "lang-erlang",
    "lang-powershell",
    "lang-solidity",
    "lang-objc",
    "lang-julia",
    "lang-cmake",
    "lang-make",
]
lang-python = ["dep:tree-sitter-python"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-go = ["dep:tree-sitter-go"]
lang-java = ["dep:tree-sitter-java"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-unreal-cpp"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-swift = ["dep:tree-sitter-swift"]
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]
lang-bash = ["dep:tree-sitter-bash"]
lang-php = ["dep:tree-sitter-php"]
lang-scala = ["dep:tree-sitter-scala"]
lang-lua = ["dep:tree-sitter-lua"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-haskell = ["dep:tree-sitter-haskell"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-dart = ["dep:tree-sitter-dart"]
lang-r = ["dep:tree-sitter-r"]
lang-hcl = ["dep:tree-sitter-hcl"]
lang-json = ["dep:tree-sitter-json"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-sql = ["dep:tree-sitter-sequel"]
lang-zig = ["dep:tree-sitter-zig"]
lang-proto = ["dep:tree-sitter-proto"]
lang-svelte = ["dep:tree-sitter-svelte-ng"]
lang-css = ["dep:tree-sitter-css"]
lang-graphql = ["dep:tree-sitter-graphql"]
lang-groovy = ["dep:tree-sitter-groovy"]
lang-nix = ["dep:tree-sitter-nix"]
lang-erlang = ["dep:tree-sitter-erlang"]
lang-powershell = ["dep:tree-sitter-powershell"]
lang-solidity = ["dep:tree-sitter-solidity"]
lang-objc = ["dep:tree-sitter-objc"]
lang-julia = ["dep:tree-sitter-julia"]
lang-cmake = ["dep:tree-sitter-cmake"]
lang-make = ["dep:tree-sitter-make"]

[dev-dependencies]
serde_json.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
# RQ1 content-loss measurement (tests/eval_retrieval.rs::measure_truncation_…):
# counts real WordPiece tokens per embedded section to quantify what the 128/256
# truncation cap drops. Test-only — these are already in the dep tree behind the
# optional `candle` feature; pulling them in as dev-deps lets the (model-free
# default build) measurement run under `just eval-truncation` without `candle`.
tokenizers.workspace = true
hf-hub.workspace = true
# F31.2b-ii-O — OpenAI embedder tests (relocated from ministr-cloud)
# spin up a fake Azure endpoint via axum to round-trip the request +
# response. Test-only dep; not pulled into the production binary.
axum.workspace = true

[[bench]]
name = "search"
harness = false

[[bench]]
name = "embedding"
harness = false

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "prefetch"
harness = false

[[bench]]
name = "token_economics"
harness = false
