[package]
name = "ministr-daemon"
version = "0.6.0"
# Proprietary engine crate — never publishable to crates.io.
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ministr daemon — HTTP API over Unix domain socket for corpus management and querying."
readme = "../README.md"
homepage.workspace = true
keywords = ["mcp", "ministr", "daemon", "ipc"]
categories = ["development-tools", "caching"]

[lints]
workspace = true

[features]
# Opt-in DirectML GPU acceleration for Windows (no-op elsewhere).
directml = ["ministr-core/directml"]

[dependencies]
# ministr crates
ministr-core = { workspace = true }
ministr-api = { workspace = true }

# HTTP daemon on UDS
axum = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }

# Observability
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Storage (session persistence)
rusqlite = { workspace = true }

# HTTP client (cloud bundle fetch)
reqwest = { workspace = true }

# Temp files (cloud bundle download)
tempfile = { workspace = true }

# Hashing
sha2 = { workspace = true }
blake3 = { workspace = true }

# SSE streaming
async-stream = "0.3"
futures-core = "0.3"

# Percent-decoding for activity-event path summaries
percent-encoding = "2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
http = "1"
http-body-util = "0.1"
serde_json = { workspace = true }
