[package]
name = "ministr-mcp"
version = "0.5.1"
# Proprietary engine crate — never publishable to crates.io.
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP server adapter for ministr — code intelligence for AI coding agents"
readme = "../README.md"
categories = ["development-tools", "web-programming"]
keywords = ["mcp", "code-intelligence", "llm", "server"]

[lints]
workspace = true

[dependencies]
ministr-api.workspace = true
ministr-core.workspace = true
rmcp.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
blake3.workspace = true
schemars.workspace = true
axum.workspace = true
tempfile.workspace = true
tokio-util = "0.7"

[dev-dependencies]
rmcp = { workspace = true, features = ["client"] }
