[package]
name = "ministr-mcp"
version = "0.6.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP server adapter for ministr — code intelligence for AI coding agents"
readme = "../README.md"
categories = ["development-tools", "web-programming"]
keywords = ["mcp", "code-intelligence", "llm", "server"]

[lints]
workspace = true

[dependencies]
ministr-api.workspace = true
ministr-core.workspace = true
# F1.2 sub-bullet 3 — MinistrServer holds an optional
# `Arc<ministr_daemon::registry::CorpusRegistry>` so the `/mcp` surface
# and the daemon's REST surface (`/api/v1/corpora/*`) share a single
# source of truth in `cmd_serve_http`. ministr-daemon does not depend
# on ministr-mcp, so this arrow stays acyclic.
ministr-daemon.workspace = true
rmcp.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
blake3.workspace = true
schemars.workspace = true
axum.workspace = true
tempfile.workspace = true
tokio-util = "0.7"
rusqlite.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
hmac.workspace = true
subtle.workspace = true
# Used for SSE: `tokio_stream::wrappers::ReceiverStream` + `StreamExt::map`.
tokio-stream = "0.1"

[dev-dependencies]
rmcp = { workspace = true, features = ["client"] }
