[package]
name = "iris-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "iris desktop app — central index daemon with GUI dashboard."

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"

# iris crates
iris-core = { workspace = true }
iris-api = { workspace = true }

# HTTP daemon on UDS
axum = { workspace = true }
tokio = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = { workspace = true }

# Embedding & indexing (owned by daemon)
fastembed = { workspace = true }
ort = { workspace = true }

# Hashing
sha2 = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
