[package]
name = "ministr-app"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ministr desktop app — central index daemon with GUI dashboard."
publish = false

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
# F2.7 — replaces tauri-plugin-shell, whose `Shell::open` was
# deprecated in Tauri 2.x. Same `open_url` / `open_path` surface,
# tighter capability scoping (only the URL schemes we explicitly
# grant in capabilities/default.json).
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"

# ministr crates (non-core — ministr-core is target-gated below because of
# the candle Metal backend, which only compiles on Apple platforms).
ministr-api = { workspace = true }
ministr-daemon = { workspace = true }

# HTTP daemon on UDS
tokio = { workspace = true }

# Cloud connection probes (mcp.ministr.ai /healthz + /reindex).
reqwest = { workspace = true, features = ["json"] }
# SHA-256 for PKCE challenge generation in the OAuth flow.
sha2 = { workspace = true }
# F1.3 PKCE carry-over — OS CSPRNG for the code verifier. RFC 7636 §4.1
# requires cryptographically random bytes; the previous SHA-256-over-
# nanos shim did not meet that bar. `getrandom::fill` delegates to the
# platform RNG (getrandom(2) on Linux, SecRandomCopyBytes on macOS,
# BCryptGenRandom on Windows).
getrandom = "0.4"
# F1.3 OS-keychain carry-over — bearer token storage moves out of plain
# `<data-dir>/cloud.json` and into the OS-native credential store
# (Keychain on macOS, secret-service on Linux, Credential Manager on
# Windows). Default features select the right native backend per target.
keyring = "3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# F6.2-d — parse session bundle tar archives client-side so the
# inspector renders the trace locally without re-fetching pieces.
tar = { workspace = true }

# Embedding & indexing (owned by daemon)
fastembed = { workspace = true }
ort = { workspace = true }

# macOS: enable the candle Metal backend alongside the default fastembed path.
[target.'cfg(target_os = "macos")'.dependencies]
ministr-core = { workspace = true, features = ["candle"] }

# Non-Apple targets: fastembed/ONNX only. candle-core with `metal` pulls
# in objc2 + the Apple Metal crate stack, which refuses to compile.
[target.'cfg(not(target_os = "macos"))'.dependencies]
ministr-core = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Opt-in DirectML GPU acceleration for Windows (no-op elsewhere). Forwards
# to the ministr-core feature, which in turn enables fastembed/directml.
directml = ["ministr-core/directml", "ministr-daemon/directml"]
